fixed stripe on front end, fixed payment route

--- a/client/app/artist/artist.html
+++ b/client/app/artist/artist.html
@@ -11,7 +11,8 @@
         <p>
           Superhero. Lover of the knight. <== See what I did there?
         </p>
-        <a href="#/payment" class="btn btn-default btn-lg">Catalyze Me</a>
+        <!-- use ui-sref and put in state instead of href w/ url -->
+        <a ui-sref="payment" class="btn btn-default btn-lg">Catalyze Me</a>
       </div>
     </div>
   </div>
