--- a/client/app/discovery/discovery.html
+++ b/client/app/discovery/discovery.html
@@ -6,8 +6,8 @@
       <div class="container">
         <h1 class="jumbotron-heading">Featured Artists in New Orleans</h1>
         <p class="lead text-muted" align="center">BEGIN TO DISCOVER THE CULTURE AROUND YOU. </p>
-        <select ng-model="medium" ng-options="medium as medium.name for medium in mediaList" ng-change="loadSubMediums(medium); getArtists()" ng-selected="medium"></select>
-        <select ng-model="selectedSubmedium" ng-options="submedium for submedium in submedia" ng-change="getArtists()"></select>
+        <select ng-model="medium" ng-options="medium as medium.$id for medium in mediaList" ng-change="getArtists(medium)" ng-selected="medium"></select>
+        <!-- <select ng-model="selectedSubmedium" ng-options="submedium for submedium in submedia" ng-change="getArtists()"></select> -->
 
       </div>
     </section>
@@ -31,7 +31,7 @@
 
 
 
-  <div class="container" ng-controller="SearcherCtrl">
+  <div class="container">
     <div class="row">
         <!-- for $scope to work we would need a controller -->
         <div class="album text-muted">
