--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,7 @@
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/artist/artist.css">
+      <link rel="stylesheet" href="app/connect/connect.css">
       <link rel="stylesheet" href="app/dashArtist/dashArtist.css">
       <link rel="stylesheet" href="app/dashUser/dashUser.css">
       <link rel="stylesheet" href="app/discovery/discovery.css">
@@ -68,6 +69,7 @@
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
+    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
     <!-- build:js({client,node_modules}) app/vendor.js -->
       <!-- bower:js -->
       <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -94,7 +96,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/main/main.controller.js"></script>
+      <script src="app/discovery/mediaList/mediaList.service.js"></script>
       <script src="app/account/login/login.controller.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/account/signup/signup.controller.js"></script>
@@ -107,6 +109,8 @@
       <script src="app/artist/artist.controller.js"></script>
       <script src="app/artist/artist.js"></script>
       <script src="app/artist/artist/artist.service.js"></script>
+      <script src="app/connect/connect.controller.js"></script>
+      <script src="app/connect/connect.js"></script>
       <script src="app/cultFire/cultFire.service.js"></script>
       <script src="app/dashArtist/dashArtist.controller.js"></script>
       <script src="app/dashArtist/dashArtist.js"></script>
@@ -114,8 +118,8 @@
       <script src="app/dashUser/dashUser.js"></script>
       <script src="app/discovery/discovery.controller.js"></script>
       <script src="app/discovery/discovery.js"></script>
-      <script src="app/discovery/mediaList/mediaList.service.js"></script>
       <script src="app/about/about.js"></script>
+      <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/payment/chargeUser/chargeUser.service.js"></script>
       <script src="app/payment/payment.controller.js"></script>
