able to charge customers to artist by ID, still need to get DB saving to work

--- a/client/app/connect/connect.html
+++ b/client/app/connect/connect.html
@@ -25,30 +25,47 @@
       <span>State</span>
       <input ng-model="state" type="text"/>
     </label>
-  </div><div class="form-row">
+  </div>
+  <div class="form-row">
     <label>
       <span>Zip</span>
       <input ng-model="zip" type="text"/>
     </label>
-  </div><div class="form-row">
+  </div>
+  <div class="form-row">
     <label>
       <span>Country</span>
       <input ng-model="country" type="text"/>
     </label>
-  </div><div class="form-row">
+  </div>
+  <div class="form-row">
     <label>
       <span>Last Four of SSN</span>
       <input ng-model="ssn" type="text"/>
     </label>
-  </div><div class="form-row">
+  </div>
+  <div class="form-row">
     <label>
       <span>Email</span>
       <input ng-model="email" type="text"/>
     </label>
-  </div><div class="form-row">
+  </div>
+  <div class="form-row">
     <label>
       <span>DOB</span>
       <input ng-model="dob" type="text"/>
+    </label>
+  </div>
+  <div class="form-row">
+    <label>
+      <span>Bank Routing Number</span>
+      <input ng-model="route" type="text"/>
+    </label>
+  </div>
+  <div class="form-row">
+    <label>
+      <span>Bank Account Number</span>
+      <input ng-model="acct" type="text"/>
     </label>
   </div>
 
