--- a/client/app/discovery/discovery.html
+++ b/client/app/discovery/discovery.html
@@ -2,6 +2,7 @@
 <div id="menu-toggle"></div>
 <div id="menu-toggle-2"></div>
 <sidebar></sidebar>
+<!-- <sidebar></sidebar> -->
 <div ng-controller="DiscoveryCtrl">
 	<div id="wrapper">
 		<div id="page-content-wrapper">
@@ -19,10 +20,8 @@
 					</div>
 				</div>
 			</div>
-			<div>
-				<h1>You've searched for Musicians!</h1>
-			</div>
-			<div class="container">
+
+			<div class="container" align="center">
 				<div class="row">
 					<div id="custom-search-input">
 						<div class="input-group col-md-12">
@@ -39,7 +38,7 @@
               <a ng-repeat="artist in artists | filter:searchText | filter:{$:medium.name}" href="artist/{{artist._id}}">
               <div class="card" >
                 <div>
-                    <img class="profilePic" ng-src="{{artist.img}}"/>
+                    <img class="profilePic" ng-src="{{artist.picUrl}}"/>
                     <div class="profileName">
                       <h2 >{{artist.name}}</h2>
                       <p>{{artist.medium}} > {{artist.submedium}}</p>
