--- a/client/index.html
+++ b/client/index.html
@@ -119,6 +119,7 @@
       <script src="bower_components/angular-youtube-mb/src/angular-youtube-embed.js"></script>
       <script src="bower_components/blueimp-file-upload/js/jquery.fileupload.js"></script>
       <script src="bower_components/cloudinary-jquery-file-upload/cloudinary-jquery-file-upload.js"></script>
+      <script src="bower_components/jquery-ui/jquery-ui.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
