--- a/client/index.html
+++ b/client/index.html
@@ -153,9 +153,9 @@
       <script src="app/discovery/mediaList/mediaList.service.js"></script>
       <script src="app/about/about.js"></script>
       <script src="app/main/main.js"></script>
-      <script src="app/payment/chargeUser/chargeUser.service.js"></script>
       <script src="app/payment/payment.controller.js"></script>
       <script src="app/payment/payment.js"></script>
+      <script src="app/payment/payment.service.js"></script>
       <script src="app/account/account.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
